--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   pull_request:
   push:
+    branches: 
+        - master
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
