--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -11,18 +11,18 @@ on:
 env:
   CIBW_TEST_COMMAND: python {project}/src/python/test.py
   CIBW_TEST_REQUIRES: numpy
-  CIBW_TEST_SKIP: cp310-macosx_x86_64
+  CIBW_TEST_SKIP: cp310-macosx_x86_64 cp311-macosx_x86_64
 
 jobs:
   build_sdist:
     name: Build SDist
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
 
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
 
     - name: Install deps
       run: python -m pip install twine build
@@ -33,7 +33,7 @@ jobs:
     - name: Check metadata
       run: twine check dist/*
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v3
       with:
         path: dist/*.tar.gz
 
@@ -47,7 +47,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
 
@@ -69,7 +69,7 @@ jobs:
       shell: bash
 
     - name: Upload wheels
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         path: wheelhouse/*.whl
 
@@ -80,14 +80,15 @@ jobs:
     if: github.event.inputs.upload != false
 
     steps:
-    - uses: actions/setup-python@v2
+    - uses: actions/setup-python@v4
 
-    - uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v3
       with:
         name: artifact
         path: dist
 
-    - uses: pypa/gh-action-pypi-publish@v1.4.2
+    - uses: pypa/gh-action-pypi-publish@v1.8.5
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+        skip-existing: true
