--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -62,7 +62,7 @@ jobs:
       env:
         # Python 2.7 on Windows requires a workaround for C++11 support,
         # built separately below
-        CIBW_SKIP: pp* cp27* *-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x
+        CIBW_SKIP: pp* cp27* *-win32 *_i686 *_aarch64 *_ppc64le *_s390x
 
     - name: Show files
       run: ls -lh wheelhouse
