--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -1,11 +1,6 @@
 name: Binary
 
-on:
-  workflow_dispatch:
-  pull_request:
-  push:
-    branches: 
-        - master
+on: workflow_dispatch
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
