use vs2022 and bump version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = PyScaffolder
-version = 1.5.2-2
+version = 1.5.3
 author = Jirawat Iamsamang
 author_email = nodtem66@gmail.com
 description = Generate 3D mesh from implicit surface and an input mesh
