--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -22,21 +22,13 @@ jobs:
       with:
         submodules: true
 
-    - uses: actions/setup-python@v5
-
-    - name: Install deps
-      run: python -m pip install twine build
-
     - name: Build SDist
-      run: python -m build -s
+      run: pipx run build --sdist
 
-    - name: Check metadata
-      run: twine check dist/*
-
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
+        name: cibw-sdist
         path: dist/*.tar.gz
-
 
   build_wheels:
     name: Wheels on ${{ matrix.os }}
@@ -44,7 +36,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-14, macos-15]
 
     steps:
     - uses: actions/checkout@v4
@@ -58,7 +50,7 @@ jobs:
         brew install openblas
     
     - name: Build wheel
-      uses: pypa/cibuildwheel@v2.17
+      uses: pypa/cibuildwheel@v3.0.1
       env:
         # Python 2.7 on Windows requires a workaround for C++11 support,
         # built separately below
@@ -69,8 +61,9 @@ jobs:
       shell: bash
 
     - name: Upload wheels
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
+        name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
         path: wheelhouse/*.whl
 
   pypi-publish:
@@ -85,12 +78,11 @@ jobs:
     if: github.event.inputs.upload != false
 
     steps:
-    - uses: actions/setup-python@v4
-
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: artifact
+        pattern: cibw-*
         path: dist
+        merge-multiple: true
 
     - name: Publish package distributions to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
