--- a/setup.cfg
+++ b/setup.cfg
@@ -6,13 +6,15 @@ author_email = nodtem66@gmail.com
 description = Generate 3D mesh from implicit surface and an input mesh
 long_description = file: README.md
 long_description_content_type = text/markdown
+license = MIT
 url = https://github.com/nodtem66/Scaffolder
 project_urls =
     Bug Tracker = https://github.com/nodtem66/Scaffolder/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
+    Programming Language :: Python :: Implementation :: CPython
+    Topic :: Scientific/Engineering
+    Topic :: Software Development :: Libraries
 
 [options]
 package_dir =
