--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Build wheel
       uses: pypa/cibuildwheel@v3.0.1
       env:
-        CIBW_SKIP: ["*-win32", "*_i686", "*_aarch64", "*_ppc64le", "*_s390x"]
+        CIBW_SKIP: "*-win32 *_i686 *_aarch64 *_ppc64le *_s390x"
 
     - name: Show files
       run: ls -lh wheelhouse
